--- a/templates/Component.tsx.hbs
+++ b/templates/Component.tsx.hbs
@@ -1,6 +1,5 @@
 import React from 'react';
-import * as SC from "./styles"
 
 export const {{pascalCase name}} = (): JSX.Element => {
-  return <SC.Container>{{pascalCase name}}</SC.Container>;
+  return <div>{{pascalCase name}}</div>;
 };
