--- a/global.css
+++ b/global.css
@@ -2,6 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+	--primary: rgb(233, 233, 233);
+	--secondary: rgb(150, 150, 150);
+  }
+
+
+  * {
+	scrollbar-width: thin;
+	scrollbar-color: var(--secondary) var(--primary);
+  }
+  
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+	width: 10px;
+  }
+  
+  *::-webkit-scrollbar-track {
+	background: var(--primary);
+	border-radius: 5px;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+	background-color: var(--secondary);
+	border-radius: 14px;
+	border: 3px solid var(--primary);
+  }
+  
+  @tailwind components;
+  @tailwind utilities;
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
